fix: z-index 수정, 및 경로 수정(#49)

--- a/src/shared/styles/theme.css
+++ b/src/shared/styles/theme.css
@@ -72,13 +72,13 @@
   --color-state-error: #ef2626;
 
   /* Z-Index */
-  --z-header: 20;
-  --z-home-calendar-section: 10;
-  --z-modal: 50;
-  --z-card-profile-1: 40;
-  --z-card-profile-2: 30;
-  --z-card-profile-3: 20;
-  --z-card-profile-4: 10;
+  --z-header: 6;
+  --z-home-calendar-section: 5;
+  --z-modal: 7;
+  --z-card-profile-1: 4;
+  --z-card-profile-2: 3;
+  --z-card-profile-3: 2;
+  --z-card-profile-4: 1;
 }
 
 @layer utilities {
